<resources>
    <string name="app_name">Woo Task</string>
    <string name="version_info">Woo Task v</string>
    <string name="love_message">Hecha con \u2665 por WMSoftware.</string>
    <string name="btnCancel">CANCELAR</string>
    <string name="btnSave">GUARDAR</string>
    <string name="btn_filter">FILTRAR</string>
    <string name="image_description">WooTask Image</string>
    <string name="new_task_hint">Describa los detalles de la tarea …</string>
    <string name="title_list_todo">Lista de Hacer</string>
    <string name="title_list_doing">Lista de Haciendo</string>
    <string name="title_list_done">Lista de Hecho</string>
    <string name="task_count_0">%1$s Tarea</string>
    <string name="task_count">%1$s Tareas</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="pass_hint">Contraseña</string>
    <string name="login_buttton">Iniciar Sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="google_button">Iniciar con Google</string>
    <string name="register_info">Ó</string>
    <string name="no_login">Continuar sin iniciar sesión</string>
    <string name="error_login_pass">Usuario o Contraseña incorrecto.</string>
    <string name="email_error">Ingrese una dirección de correo válida.</string>
    <string name="pass_error">Ingrese una contraseña válida.</string>
    <string name="title_delete_dialog">¿Seguro que desea eliminar?</string>
    <string name="dialog_yes">SI</string>
    <string name="dialog_dismiss">NO</string>
    <string name="dialog_confirm">CONFIRMAR</string>
    <string name="dialog_cancel">CANCELAR</string>
    <string name="nologin_title">ATENCIÓN</string>
    <string name="nologin_alternative_message">Recomendamos iniciar sesión para tener una mejor experiencia en la aplicación.</string>
    <string name="nologin_message">Si continúas sin iniciar sesión tus tareas no serán guardadas en la nube, lo que significa que no podrás recuperarlas si cierras sesión o cambias de dispositivo.</string>
    <string name="forgot_title">Recuperar contraseña</string>
    <string name="forgot_message">Se enviará un vínculo para recuperar su contraseña al correo: %1$s</string>
    <string name="forgot_email_sent">Correo de recuperación enviado</string>
    <string name="forgot_email_error">Error al enviar correo de recuperación</string>
    <string name="forgot_pass">¿Has olvidado tu contraseña?</string>
    <string name="login_google_error">Error al iniciar sesión con Google.</string>
    <string name="error_register">Error al realizar el registro.</string>
    <string name="error_confirm_pass">Las contraseñas no coinciden.</string>
    <string name="logout_title">Cerrar sesión</string>
    <string name="delete_tag_title">Eliminar Etiqueta</string>
    <string name="delete_tag_message">¿Esta seguro que desea eliminar la Etiqueta?</string>
    <string name="logout_message">¿Estas seguro que deseas salir?</string>
    <string name="google_web_client_id" translatable="false">302162430961-699trugteagvmn245lknetbqckq05arc.apps.googleusercontent.com</string>
    <string name="menu_option_0">EDITAR</string>
    <string name="menu_option_1">Mover a HACER</string>
    <string name="menu_option_2">Mover a HACIENDO</string>
    <string name="menu_option_3">Mover a HECHO</string>
    <string name="menu_option_4">ELIMINAR</string>
    <string name="but_update">ACTUALIZAR</string>
    <string name="update_string"><b>Hay una nueva versión disponible.</b>\nLe invitamos a actualizar la aplicación.</string>
    <string name="abrir">ABRIR</string>
    <string name="cerrar">CERRAR</string>
    <string name="no_session_user">Usuario</string>
    <string name="alarm_text">Tienes una Tarea para hoy!</string>
    <string name="alarm_notification_title">Hey, no lo olvides!</string>
    <string name="set_alarm_title">FECHA LIMITE</string>
    <string name="title_hour_switch">AGREGAR HORA</string>
    <string name="default_date" translatable="false">26–06–1998</string>
    <string name="default_hour" translatable="false">12:00 AM</string>
    <!-- Key para el Shared Preferences -->
    <string name="preferences_key" translatable="false">UserPrefs</string>
    <!-- Titulos de Botones del Navigation Drawer -->
    <string name="home">Inicio</string>
    <string name="configuration">Configuración</string>
    <string name="remove_ads">Remover anuncios</string>
    <string name="purcharse_restored">Compra restaurada</string>
    <string name="purcharse_status_unknown">La compra se está procesando.</string>
    <string name="purcharse_status_pending">La compra está pendiente, complete la transacción.</string>
    <string name="help">Ayuda</string>
    <string name="share_app">Comparte la app</string>
    <!-- Texto para Actividad de Configuración -->
    <string name="theme_title">TEMA</string>
    <string name="switch_theme_text">Modo Oscuro</string>
    <string name="notifications_title">NOTIFICACIONES</string>
    <string name="switch_notifications_text">Notificaciones</string>
    <string name="regional_title">REGIONAL</string>
    <string name="switch_language">Idioma</string>
    <string name="switch_font">Fuente</string>
    <string name="back_color_text">Color de Fondo</string>
    <string name="language_option_0">Ingles</string>
    <string name="language_option_1">Español</string>
    <string name="language_option_2">Portugués</string>
    <string name="language_changed_text">Reinicie la aplicación para aplicar los cambios.</string>
    <string name="account_title">CUENTA</string>
    <string name="policiy_text">Términos y Condiciones</string>
    <string name="font_option_0" translatable="false">Nunito</string>
    <string name="font_option_1" translatable="false">Newsreader</string>
    <string name="font_option_2" translatable="false">Lora</string>
    <string name="font_option_3" translatable="false">Poppins</string>
    <string name="font_option_4" translatable="false">Roboto</string>
    <string name="font_option_5" translatable="false">Abeezee</string>
    <string name="font_option_6" translatable="false">Courgette</string>
    <string name="font_option_7" translatable="false">Handlee</string>
    <string name="font_option_8" translatable="false">Playball</string>
    <string name="name">Nombre</string>
    <string name="max_tags_by_task">Sólo se permiten 3 etiquetas en una Tarea.</string>
    <string name="max_3_items">Sólo puedes seleccionar 3 etiquetas.</string>
    <string name="filter_title">Filtrar por:</string>
    <string name="filter_text">Filtro</string>
    <string name="task_tags_title">Etiquetas de la Tarea:</string>
    <string name="my_tags">Mis Etiquetas:</string>
    <string name="task_without_tags">Esta tarea no tiene ninguna etiqueta.</string>
    <string name="no_tags">Aún no has creado una etiqueta.</string>
    <string name="empty_field">No deje el campo vacio.</string>
    <string name="create_new_tag">CREAR NUEVA ETIQUETA</string>
    <string name="cancel_limit_date">CANCELAR FECHA DE ENTREGA</string>
    <string name="cancel_limit_date_dialog_title">Cancelar Fecha de Entrega</string>
    <string name="cancel_limit_date_dialog_message">¿Esta seguro que desea cancelar la Fecha de Entrega?</string>
    <string name="limit_date_to">Fecha limite para:</string>
    <string name="task_status">Estado de la Tarea:</string>
    <string name="task_status_0">Pendiente</string>
    <string name="task_status_1">Completada</string>
    <string name="task_status_2">No Completada</string>
    <string name="task_status_4">En progreso</string>
    <string name="prev_date_error">No puedes seleccionar una fecha anterior a hoy.</string>
    <string name="share_app_text">Déjame recomendarte esta aplicación</string>
    <string name="choose_one_option">Elige una opción</string>
    <string name="but_next">SIGUIENTE</string>
    <string name="but_prev">ANTERIOR</string>
    <string name="but_finish">FINALIZAR</string>
    <string name="but_skip">SALTAR</string>
    <string name="text_terms">Al crear una cuenta, acepta nuestros Términos y Condiciones así como nuestra Política de Privacidad.</string>
    <string name="slide_0_text">Es una herramienta de gestión de tareas que permite a los usuarios visualizar sus flujos de trabajo con el fin de aumentar la productividad.</string>
    <string name="slide_1_text">Crea tareas de forma rápida y sencilla, selecciona una fecha de entrega, tambien puedes personalizar tu tablero.</string>
    <string name="slide_2_title">Organiza tu flujo de trabajo</string>
    <string name="slide_2_text">Mueve las tareas que estas realizando ó las que ya has realizado.</string>
    <string name="slide_3_title">Comienza ahora</string>
    <string name="slide_3_text">Vamos a crear tu primera tarea!</string>
    <string name="invalid_date">Fecha no válida</string>
    <string name="purcharse_error">Ha ocurrido un error durante el proceso de compra.</string>
    <string name="purcharse_success">Compra realizada con éxito.</string>
    <string name="privacy_policy_title" translatable="false">WOO TASK PRIVACY POLICY</string>
    <string name="privacy_policy" translatable="false">This privacy policy governs your use of the software application Woo Task for Android mobile devices that was created by WMSoftware.\nWhat information we collect?\nWoo Task application does not collect personal information like name, surname, age, date of birth, etc.\nWe use Google supplied APP performance tracking information to improve Application. This application only makes use of the sound your Android mobile phone to create the alarm.\nGoogle Analytics\nThis Application uses Google Analytics to help us analyze how you use app. It helps us to improve this product.\nThanks Google Analytics we know how long you use app, what kind of device you\'re using, where are you from and a little bit more. All this is used to improve the app.\nRead more about Google Analytics\nFirebase\nWe use Firebase to store all the app information. Information like personal data and manage the e-mail login to our app.\nYou can see the entire privacy policy of firebase here.\nhttps://firebase.google.com/support/privacy/?hl=es-419\nAdvertisement\nGoogle Admob privacy policy is here: https://support.google.com/admob/answer/6128543?hl=en.\nThird party vendors, including Google, use cookies to serve ads based on a user\'s prior visits to your website.\nContact\nTo contact us please use email: wilfredmoscote@gmail.com\n\n-Acknowledgements\nWe use these libraries to make WooTask:\n- Lottie\n- Google Fonts\n- Google Icons\n- Hilt\n- Shimmer\n- Glide\n- OkHttp3\n- DotsIndicator\n- Room\n- ColorPicker\n</string>
</resources>