<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/dragIcon"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_drag" />

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        style="?attr/bottomSheetStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp"
        app:behavior_draggable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dragIcon">

        <RadioGroup
            android:id="@+id/fontRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/font_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_0"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/newsreader"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_1"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lora"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_2"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_3"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_4"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_5"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/courgette"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_6"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/handlee"
                android:paddingHorizontal="5dp"
                android:text="@string/font_option_7"
                app:buttonTint="?attr/textAppearanceCaption" />

            <RadioButton
                android:id="@+id/font_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playball"
                android:paddingHorizontal="5dp"

                android:text="@string/font_option_8"
                app:buttonTint="?attr/textAppearanceCaption" />
        </RadioGroup>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>