<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.activity.LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="120dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/titleBanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:fontFamily="@font/kaushan_regular"
            android:scaleType="fitXY"
            android:textSize="40sp"
            android:textColor="?attr/textAppearanceCaption"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:startIconDrawable="@drawable/ic_email"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pass_hint"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconDrawable="@drawable/ic_lock"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="13dp"
            android:layout_marginVertical="5dp"
            android:textColor="@color/white"
            android:text="@string/login_buttton"
            />
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="13dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            android:text="@string/register_button"
            app:backgroundTint="@color/blue"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_info"
            android:gravity="center_horizontal"
            android:textColor="?attr/textAppearanceCaption"
            android:textStyle="bold"
            />
        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:paddingVertical="13dp"

            app:backgroundTint="?attr/textAppearanceCaption"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"
            app:icon="@drawable/ic_google"
            android:text="@string/google_button"
            />
        <Button
            android:id="@+id/btnNologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:text="@string/no_login"
            android:paddingVertical="13dp"
            android:textColor="?attr/textAppearanceCaption"
            style="?attr/materialButtonOutlinedStyle"
            app:rippleColor="?attr/colorControlNormal"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/versionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_info"
        android:gravity="center_horizontal"
        android:textStyle="italic"
        android:paddingVertical="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>