<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/dragIcon"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_drag" />
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        app:rippleColor="?attr/colorControlNormal"
        android:textColor="?attr/textAppearanceCaption"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:textColor="?attr/textAppearanceCaption"
        app:rippleColor="?attr/colorControlNormal"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        />
    <EditText
        android:id="@+id/newTask"
        android:inputType="textMultiLine|textCapSentences"
        android:gravity="top|start"
        android:scrollbars="vertical"
        android:hint="@string/new_task_hint"
        android:layout_marginHorizontal="15dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="500dp"
        android:maxHeight="800dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"

        android:importantForAutofill="no" />
</androidx.constraintlayout.widget.ConstraintLayout>