<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/dragIcon"
        android:layout_width="50dp"
        android:layout_height="48dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/image_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_drag" />
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancel"
        app:rippleColor="?attr/colorControlNormal"
        android:textColor="?attr/textAppearanceCaption"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        />
    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:textColor="?attr/textAppearanceCaption"
        app:rippleColor="?attr/colorControlNormal"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm_title"
            android:layout_marginHorizontal="30dp"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="?attr/textAppearanceCaption"
            style="@style/Widget.MaterialComponents.TextView"
            />

        <DatePicker
            android:id="@+id/datePicker"
            style="@style/CustomCalendarTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:datePickerMode="calendar" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="horizontal">
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchHour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_hour_switch"
                android:textColor="?attr/textAppearanceCaption"
                android:textSize="16sp"
                android:textStyle="bold"
                app:thumbTint="@color/yellow"
                app:trackTint="?attr/textAppearanceCaption" />
            <Button
                android:id="@+id/txtHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/default_hour"
                android:textColor="?attr/textAppearanceCaption"
                android:textSize="20sp"
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>